# config-manager-fastapi-rabbitmq

./: Dockerfile  README.md  broker.py  compose.yaml  models.py  pyproject.toml  pytest.ini
config_status_service/: main.py
cpe_locate_service/: main.py
task_messenger/: main.py
tests/: test_broker.py  test_config_status.py  test_cpe_locate.py  test_task_messenger.py
